# Yatla

./: CMakeLists.txt  README.md  TODO  Yatla.vala
cmake/: Translations.cmake  project.cmake
data/: yatla.desktop
src/: Database.vala  DateTime.vala  Layout.vala  Task.vala  Yatla  Yatla.vala
src/Widgets/: Popover.vala  Preferences.vala  Sidebar.vala  TaskPreferences.vala  Toolbar.vala
vapi/: config.vapi
